Add responsiveness to stars in product-box: add stars.js, add new classes (.star, .highlightedStars, .markedStar) to index.html), add class .star to product-box.scss

--- a/src/index.html
+++ b/src/index.html
@@ -172,12 +172,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+              <div class="stars highlightedStars"> 
+                <a class="star markedStar"></a>
+                <a class="star markedStar"></a>
+                <a class="star markedStar"></a>
+                <a class="star"></a>
+                <a class="star"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -204,12 +204,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+              <div class="stars"> 
+                <a class="star full"></a>
+                <a class="star full"></a>
+                <a class="star"></a>
+                <a class="star"></a>
+                <a class="star"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -236,12 +236,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+              <div class="stars"> 
+                <a class="star full"></a>
+                <a class="star full"></a>
+                <a class="star"></a>
+                <a class="star"></a>
+                <a class="star"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -268,12 +268,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+              <div class="stars"> 
+                <a class="star full"></a>
+                <a class="star full"></a>
+                <a class="star"></a>
+                <a class="star"></a>
+                <a class="star"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -300,12 +300,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+              <div class="stars"> 
+                <a class="star full"></a>
+                <a class="star full"></a>
+                <a class="star"></a>
+                <a class="star"></a>
+                <a class="star"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -332,12 +332,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+              <div class="stars"> 
+                <a class="star full"></a>
+                <a class="star full"></a>
+                <a class="star"></a>
+                <a class="star"></a>
+                <a class="star"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -364,12 +364,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+              <div class="stars"> 
+                <a class="star full"></a>
+                <a class="star full"></a>
+                <a class="star"></a>
+                <a class="star"></a>
+                <a class="star"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -396,12 +396,12 @@
             </div>
             <div class="content">
               <h5>Aenean Ru Bristique</h5>
-              <div class="stars">
-                <a href="#" class="full"></a>
-                <a href="#" class="full"></a>
-                <a href="#"></a>
-                <a href="#"></a>
-                <a href="#"></a>
+              <div class="stars"> 
+                <a class="star full"></a>
+                <a class="star full"></a>
+                <a class="star"></a>
+                <a class="star"></a>
+                <a class="star"></a>
               </div>
             </div>
             <div class="line"></div>
@@ -594,6 +594,7 @@
     crossorigin="anonymous"></script>
   <script src="./scripts/bootstrap.min.js"></script>
   <script src="./scripts/app.js"></script>
+  <script src="./scripts/stars.js"></script>
 </body>
 
 </html>
