Add slider to brands section

--- a/src/index.html
+++ b/src/index.html
@@ -771,46 +771,66 @@
       </div>
     </div>
   </div>
+
+  
   <div class="section--brands">
-    <div class="container">
-      <div class="row logos">
-        <div class="arrow arrow-left">
-          <span class="fas fa-arrow-left"></span>
-        </div>
-        <div class="col-2 pocket">
-          <div class="logoBox">
-            <img class="logo" src="images/brands/brand1.png"/>
-          </div>
-        </div>
-        <div class="col-2 pocket">
-          <div class="logoBox">
+
+    <div class="brands-carousel container">
+
+      <div class="brands-carousel-controls" tabindex="0">
+        <button class="prev arrow arrow-left" data-controls="prev" aria-controls="customize" tabindex="-1">
+          <i class="fas fa-angle-left"></i>
+        </button>
+        <button class="next arrow arrow-right" data-controls="next" aria-controls="customize" tabindex="-1">
+          <i class="fas fa-angle-right"></i>          
+        </button>
+      </div>
+
+      <div class="brands-slider logos">
+        <div class="slider-item">
+          <div class="card">
             <img class="logo" src="images/brands/brand2.png"/>
-            </div>
-        </div>
-        <div class="col-2 pocket">
-          <div class="logoBox">
-            <img class="logo" src="images/brands/brand3.png"/>
           </div>
         </div>
-        <div class="col-2 pocket">
-          <div class="logoBox">
-            <img class="logo" src="images/brands/brand4.png"/>
-          </div>
-        </div>
-        <div class="col-2 pocket">
-          <div class="logoBox">
+        <div class="slider-item">
+          <div class="card">
             <img class="logo" src="images/brands/brand5.png"/>
           </div>
         </div>
-        <div class="col-2 pocket">
-          <div class="logoBox">
+        <div class="slider-item">
+          <div class="card">
             <img class="logo" src="images/brands/brand1.png"/>
           </div>
         </div>
-        <div class="arrow arrow-right">
-          <span class="fas fa-arrow-right"></span>
+        <div class="slider-item">
+          <div class="card"><img class="logo" src="images/brands/brand2.png"/></div>
         </div>
-      </div>
+        <div class="slider-item">
+          <div class="card"><img class="logo" src="images/brands/brand3.png"/></div>
+        </div>
+        <div class="slider-item">
+          <div class="card"><img class="logo" src="images/brands/brand4.png"/></div>
+        </div>
+        <div class="slider-item">
+          <div class="card"><img class="logo" src="images/brands/brand5.png"/></div>
+        </div>
+        <div class="slider-item">
+          <div class="card"><img class="logo" src="images/brands/brand1.png"/></div>
+        </div>
+        <div class="slider-item">
+          <div class="card"><img class="logo" src="images/brands/brand2.png"/></div>
+        </div>
+        <div class="slider-item">
+          <div class="card"><img class="logo" src="images/brands/brand3.png"/></div>
+        </div>
+        <div class="slider-item">
+          <div class="card"><img class="logo" src="images/brands/brand4.png"/></div>
+        </div>
+        <div class="slider-item">
+          <div class="card"><img class="logo" src="images/brands/brand5.png"/></div>
+        </div>
+      </div>    
+    </div>
     </div>
   </div>
 
