Add .active class on menu element

--- a/src/index.html
+++ b/src/index.html
@@ -98,7 +98,7 @@
           </div>
           <div id="menu-dropdown" class="col-auto menu">
             <ul>
-              <li><a href="#">Home</a></li>
+              <li><a href="#" class="active">Home</a></li>
               <li><a href="#">Furniture</a></li>
               <li><a href="#">Chair</a></li>
               <li><a href="#">Table</a></li>
