--- a/src/index.html
+++ b/src/index.html
@@ -115,11 +115,11 @@
     <div class="container features">
       <div class="row">
 <!-- carousel 1 - hot deals -->
-        <div class="col col-4 hot-deals carousel slide" id="carousel1" data-ride="carousel" data-interval=3000>  
+        <div class="col col-md-4 d-none d-md-inline-block hot-deals carousel slide" id="carousel1" data-ride="carousel" data-interval=3000>  
           <div class="top-bar">
           Hot deals
 <!-- carousel indicators-->
-            <div class="dots">
+            <div class="dots d-none d-xl-block">
               <ol class="carousel-indicators">
                 <li class="active" data-target="#carousel1" data-slide-to="0"></li>
                 <li data-target="#carousel1" data-slide-to="1"></li>
@@ -160,7 +160,7 @@
                   <a href="#" class="btn-outline active"><i class="fas fa-exchange-alt"></i></a>
                 </div>
                 <div class="price">
-                  <div class="price-old">$ 105.00</div>
+                  <div class="price-old d-none d-xl-block">$ 105.00</div>
                   <div class="btn-main-small">$ 80.00</div>
                 </div>
               </div>
@@ -196,7 +196,7 @@
                     <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
                   </div>
                   <div class="price">
-                    <div class="price-old">$ 65.00</div>
+                    <div class="price-old d-none d-xl-block">$ 65.00</div>
                     <div class="btn-main-small">$ 55.00</div>
                   </div>
                 </div>
@@ -232,7 +232,7 @@
                       <a href="#" class="btn-outline"><i class="fas fa-exchange-alt"></i></a>
                     </div>
                     <div class="price">
-                      <div class="price-old">$ 35.00</div>
+                      <div class="price-old d-none d-xl-block">$ 35.00</div>
                       <div class="btn-main-small">$ 30.00</div>
                     </div>
                   </div>
@@ -240,7 +240,7 @@
               </div>
             </div>     
 <!-- carousel 2 - featured -->
-        <div id="carousel2" class="col col-8 furniture text-center carousel slide" data-interval="false">
+        <div id="carousel2" class="col col-8 col-md-8 col-sm-12 furniture text-center carousel slide" data-interval="false">
           <div class="carousel-inner">
 <!-- slide 1 -->
             <div class="carousel-item active fur1">
