Add swipe and remove hover on tablets/mobiles

--- a/src/index.html
+++ b/src/index.html
@@ -134,7 +134,7 @@
               <div class="photo ph1 text-center">
                 <div class="hover">
                   <button class="btn-main"><span class="fas fa-shopping-basket"></span>  Add to cart</button>
-                  <div class="counter">
+                  <div class="counter d-none d-xl-block">
                     <div>25<span>days</span></div>
                     <div>10<span>hrs</span></div>
                     <div>45<span>mins</span></div>
@@ -170,7 +170,7 @@
                 <div class="photo ph2 text-center">
                   <div class="hover">
                     <button class="btn-main"><span class="fas fa-shopping-basket"></span>  Add to cart</button>
-                    <div class="counter">
+                    <div class="counter d-none d-xl-block">
                       <div>10<span>days</span></div>
                       <div>03<span>hrs</span></div>
                       <div>40<span>mins</span></div>
@@ -206,7 +206,7 @@
                   <div class="photo ph3 text-center">
                     <div class="hover">
                       <button class="btn-main"><span class="fas fa-shopping-basket"></span>  Add to cart</button>
-                      <div class="counter">
+                      <div class="counter d-none d-xl-block">
                         <div>15<span>days</span></div>
                         <div>11<span>hrs</span></div>
                         <div>49<span>mins</span></div>
@@ -1120,6 +1120,7 @@
     crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
     crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.touchswipe/1.6.4/jquery.touchSwipe.min.js"></script>
   <script src="./scripts/bootstrap.min.js"></script>
   <script src="./scripts/app.js"></script>
 </body>
