--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
     <div class="container features">
       <div class="row">
 <!-- carousel 1 - hot deals -->
-        <div class="col col-md-4 d-none d-md-inline-block hot-deals carousel slide" id="carousel1" data-ride="carousel" data-interval=3000>  
+        <div class="col col-4 col-md-4 d-none d-md-inline-block hot-deals carousel slide" id="carousel1" data-ride="carousel" data-interval=3000>  
           <div class="top-bar">
           Hot deals
 <!-- carousel indicators-->
@@ -240,7 +240,7 @@
               </div>
             </div>     
 <!-- carousel 2 - featured -->
-        <div id="carousel2" class="col col-8 col-md-8 col-sm-12 furniture text-center carousel slide" data-interval="false">
+        <div id="carousel2" class="col col-12 col-sm-12 col-md-8 furniture text-center carousel slide" data-interval="false">
           <div class="carousel-inner">
 <!-- slide 1 -->
             <div class="carousel-item active fur1">
