Add content to promotions section

--- a/src/index.html
+++ b/src/index.html
@@ -179,6 +179,8 @@
             </div>
             <div class="rebate-info">
               <p>GUEST ROOM</p>
+              <p class="product-name">SOFA</p>
+              <p class="product-rebate">-20%</p>
             </div>
           </div>
         </div>
@@ -187,6 +189,11 @@
             <div class="col-12">
               <div class="promo-box-small">
                 <img src="./images/new/bed/10.jpg">
+                <div class="collection">
+                  <p class="collection-title"><b>OFFICE</b> CHAIR</p>
+                  <p class="collection-subtitle">COLLECTION</p>
+                  <p class="collection-price">$ 200.00</p>
+                </div>
               </div>
             </div>
           </div>
@@ -194,6 +201,10 @@
             <div class="col-12">
               <div class="promo-box-small">
                 <img src="./images/new/bed/07.jpg">
+                <div class="special-collection">
+                  <p class="special-collection-title"><b>SPECIAL</b> COLLECTION</p>
+                  <p class="special-collection-subtitle">SAVE UP TO 45% ON FURNITURE</p>
+                </div>
               </div>
             </div>
           </div>
