In promotions section: add classes to paragraphs and change respectively in promo-box.scss, change <b> to <span> in index.html, change markup and css for promo-box and promo-box-small to make them more responsive in high resolutions

--- a/src/index.html
+++ b/src/index.html
@@ -174,11 +174,11 @@
       <div class="row">
         <div class="col-6">
           <div class="promo-box">
-            <img src="./images/new/bed/09.jpg">
+            <img class="promo-box-img" src="./images/new/bed/09.jpg">
             <div class="rebate">
             </div>
             <div class="rebate-info">
-              <p>GUEST ROOM</p>
+              <p class="rebate-info-title">GUEST ROOM</p>
               <p class="product-name">SOFA</p>
               <p class="product-rebate">-20%</p>
             </div>
@@ -187,10 +187,12 @@
         <div class="col-6">
           <div class="row">
             <div class="col-12">
-              <div class="promo-box-small">
-                <img src="./images/new/bed/10.jpg">
+              <div class="promo-box-small top">
                 <div class="collection">
-                  <p class="collection-title"><b>OFFICE</b> CHAIR</p>
+                  <p class="collection-title">
+                    <span class="promo-bold">OFFICE</span>
+                    CHAIR
+                  </p>
                   <p class="collection-subtitle">COLLECTION</p>
                   <p class="collection-price">$ 200.00</p>
                 </div>
@@ -199,10 +201,12 @@
           </div>
           <div class="row">
             <div class="col-12">
-              <div class="promo-box-small">
-                <img src="./images/new/bed/07.jpg">
+              <div class="promo-box-small down">
                 <div class="special-collection">
-                  <p class="special-collection-title"><b>SPECIAL</b> COLLECTION</p>
+                  <p class="special-collection-title">
+                    <span class="promo-bold">SPECIAL</span>
+                    COLLECTION
+                  </p>
                   <p class="special-collection-subtitle">SAVE UP TO 45% ON FURNITURE</p>
                 </div>
               </div>
