This branch is to fix the problem in the github repository; Add responsive stars - as in task WDP181102-19

--- a/src/index.html
+++ b/src/index.html
@@ -218,12 +218,12 @@
                 </div>
                 <div class="content">
                   <h5>Aenean Ru Bristique</h5>
-                  <div class="stars">
-                    <a href="#" class="full"></a>
-                    <a href="#" class="full"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                  <div class="stars highlightedStars"> 
+                    <a class="star markedStar"></a>
+                    <a class="star markedStar"></a>
+                    <a class="star markedStar"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
                   </div>
                 </div>
                 <div class="line"></div>
@@ -251,12 +251,12 @@
                 </div>
                 <div class="content">
                   <h5>Aenean Ru Bristique</h5>
-                  <div class="stars">
-                    <a href="#" class="full"></a>
-                    <a href="#" class="full"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                  <div class="stars"> 
+                    <a class="star full"></a>
+                    <a class="star full"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
                   </div>
                 </div>
                 <div class="line"></div>
@@ -284,12 +284,12 @@
                 </div>
                 <div class="content">
                   <h5>Aenean Ru Bristique</h5>
-                  <div class="stars">
-                    <a href="#" class="full"></a>
-                    <a href="#" class="full"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                  <div class="stars"> 
+                    <a class="star full"></a>
+                    <a class="star full"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
                   </div>
                 </div>
                 <div class="line"></div>
@@ -316,12 +316,12 @@
                 </div>
                 <div class="content">
                   <h5>Aenean Ru Bristique</h5>
-                  <div class="stars">
-                    <a href="#" class="full"></a>
-                    <a href="#" class="full"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                  <div class="stars"> 
+                    <a class="star full"></a>
+                    <a class="star full"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
                   </div>
                 </div>
                 <div class="line"></div>
@@ -349,12 +349,12 @@
                 </div>
                 <div class="content">
                   <h5>Aenean Ru Bristique</h5>
-                  <div class="stars">
-                    <a href="#" class="full"></a>
-                    <a href="#" class="full"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                  <div class="stars"> 
+                    <a class="star full"></a>
+                    <a class="star full"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
                   </div>
                 </div>
                 <div class="line"></div>
@@ -381,12 +381,12 @@
                 </div>
                 <div class="content">
                   <h5>Aenean Ru Bristique</h5>
-                  <div class="stars">
-                    <a href="#" class="full"></a>
-                    <a href="#" class="full"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                  <div class="stars"> 
+                    <a class="star full"></a>
+                    <a class="star full"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
                   </div>
                 </div>
                 <div class="line"></div>
@@ -413,12 +413,12 @@
                 </div>
                 <div class="content">
                   <h5>Aenean Ru Bristique</h5>
-                  <div class="stars">
-                    <a href="#" class="full"></a>
-                    <a href="#" class="full"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                  <div class="stars"> 
+                    <a class="star full"></a>
+                    <a class="star full"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
                   </div>
                 </div>
                 <div class="line"></div>
@@ -446,12 +446,12 @@
                 </div>
                 <div class="content">
                   <h5>Aenean Ru Bristique</h5>
-                  <div class="stars">
-                    <a href="#" class="full"></a>
-                    <a href="#" class="full"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
-                    <a href="#"></a>
+                  <div class="stars"> 
+                    <a class="star full"></a>
+                    <a class="star full"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
+                    <a class="star"></a>
                   </div>
                 </div>
                 <div class="line"></div>
@@ -1894,6 +1894,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.8.8/tiny-slider.js"></script>
   <script src="./scripts/app.js"></script>
   <script src="./scripts/blog-slider.js"></script>
+  <script src="./scripts/stars.js"></script>
 </body>
 </body>
 
