--- a/src/index.html
+++ b/src/index.html
@@ -170,6 +170,55 @@
       </div>
     </div>
   </div>
+ 
+  <div class="section--promotions">
+    <div class="container">
+      <div class="row">
+        <div class="col-6">
+          <div class="promo-box">
+            <img class="promo-box-img" src="./images/new/bed/09.jpg">
+            <div class="rebate">
+            </div>
+            <div class="rebate-info">
+              <p class="rebate-info-title">GUEST ROOM</p>
+              <p class="product-name">SOFA</p>
+              <p class="product-rebate">-20%</p>
+            </div>
+          </div>
+        </div>
+        <div class="col-6">
+          <div class="row">
+            <div class="col-12">
+              <div class="promo-box-small top">
+                <div class="collection">
+                  <p class="collection-title">
+                    <span class="promo-bold">OFFICE</span>
+                    CHAIR
+                  </p>
+                  <p class="collection-subtitle">COLLECTION</p>
+                  <p class="collection-price">$ 200.00</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-12">
+              <div class="promo-box-small down">
+                <div class="special-collection">
+                  <p class="special-collection-title">
+                    <span class="promo-bold">SPECIAL</span>
+                    COLLECTION
+                  </p>
+                  <p class="special-collection-subtitle">SAVE UP TO 45% ON FURNITURE</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <div class="section--products">
     <div class="container">
       <div class="panel-bar">
