Add RWD for post section

--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,15 @@
   </head>
 
   <body>
+    <module href="./src/partials/10_header.html"></module>
+
+    <module href="./src/partials/30_section-features.html"></module>
+
+    <module href="./src/partials/50_section-products.html"></module>
+
     <module href="./src/partials/70_section-blog-posts.html"></module>
+
+    <module href="./src/partials/90_footer.html"></module>
 
     <script src="./scripts/bootstrap.min.js"></script>
     <script src="./scripts/app.js"></script>
