--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Furnitures shop</title>
+
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css" />
     <link rel="stylesheet" href="./sass/style.scss" />
   </head>
 
@@ -18,9 +20,10 @@
     <module href="./src/partials/70_section-blog-posts.html"></module>
 
     <module href="./src/partials/90_footer.html"></module>
-
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
     <script src="./scripts/bootstrap.min.js"></script>
     <script src="./scripts/cart.count.js"></script>
+    <!-- <script src="./scripts/featuredScripts.js"></script> -->
     <script src="./scripts/app.js"></script>
   </body>
 </html>
