Try init tiny-slider

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,8 @@
     <module href="./src/partials/90_footer.html"></module>
 
     <script src="./scripts/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.1/min/tiny-slider.js"></script>
     <script src="./scripts/app.js"></script>
   </body>
 </html>
+<!---->
