--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <title>Furnitures shop</title>
+    <link rel="stylesheet" href="https://unpkg.com/flickity@2/dist/flickity.min.css" />
     <link rel="stylesheet" href="./sass/style.scss" />
   </head>
 
@@ -21,7 +22,13 @@
 
     <module href="./src/partials/90_footer.html"></module>
 
-    <script src="./scripts/bootstrap.min.js"></script>
+    <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
+    <script src="./scripts/flickityInit.js"></script>
+    <script src="./scripts/gallerySliderTabs.js"></script>
+    <script src="./scripts/tooltips.js"></script>
     <script src="./scripts/app.js"></script>
   </body>
 </html>
