--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,6 @@
 
     <script src="./scripts/bootstrap.min.js"></script>
     <script src="https://unpkg.com/flickity@2/dist/flickity.pkgd.min.js"></script>
-    <script src="./scripts/app.js"></script>
+    <script src="./scripts/productsCarousel.js"></script>
   </body>
 </html>
